--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Story+Script&family=DM+Serif+Text:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap');
 
-/* Color Palette 
+/* Color Palette PALATANDAAN KO COPY PASTE FOR COLORS
 asul: #0f4c81 
 pula: #c1121f 
 dilaw: #f4c430 
 puti: #fefcfb 
 sand: #fff4d2  */
-/* Base Styles */
+
 
 body {
     font-family: "DM Serif Text", serif;
@@ -17,7 +17,7 @@ body {
     padding: 0;
 }
 
-/* Header */
+/* Header Styles*/
 header {
     text-align: center;
     background-color: #0f4c81;
@@ -26,6 +26,7 @@ header {
     border-bottom: 6px solid #f4c430;
 }
 
+/*Title ng Header*/
 header h1 {
     font-family: "Rammetto One", sans-serif;
     font-size: 40px;
@@ -40,6 +41,7 @@ header h1 {
     border: 6px solid #f4c430;
 }
 
+/*Picture ng Logo*/
 #hero img {
     width: 100%;
     max-width: 300px;
@@ -47,6 +49,7 @@ header h1 {
     border-radius: 20px;
 }
 
+/*Text ng Hero*/
 .hero-text {
     margin-top: 24px;
     color: #0f4c81;
@@ -115,7 +118,7 @@ header h1 {
 
 .description p {
     color: #000;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 /* Reviews Section */
@@ -167,7 +170,7 @@ footer {
 }
 
 /* Responsive Design */
-@media (min-width: 768px) {
+@media (min-width: 1000px) {
     .project {
         flex-direction: row;
         justify-content: center;
