--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ header {
 header h1 {
     font-family: "Rammetto One", sans-serif;
     font-size: 40px;
-    
+    color: #fefcfb;
+    text-shadow: 3px 3px 5px #c1121f;  
 }
 
 /* Hero Section */
@@ -66,8 +67,8 @@ header h1 {
     font-size: 20px;
     color: #000;
     text-align: center;
-    max-width: 800px;       /* Keeps the paragraph at a readable width */
-    margin: 0 auto;         /* Centers it horizontally HELPED */
+    max-width: 800px;       
+    margin: 0 auto;      
 }
 
 /* Projects Section */
